# libft

./: .gitignore  CMakeLists.txt  Makefile  README.md  colors.mk  constants.mk  ft_abs.c  ft_atoi.c  ft_atol.c  ft_bzero.c  ft_ctoi_base.c  ft_dprintf.c  ft_endswith.c  ft_fprintf.c  ft_get_next_line.c  ft_gnl.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd.c  ft_lstappend.c  ft_lstdel.c  ft_lstdelone.c  ft_lstfree.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstpush.c  ft_lstremove_if.c  ft_lstrev.c  ft_lstsize.c  ft_memalloc.c  ft_memccpy.c  ft_memccpy_backup.c  ft_memchr.c  (+66 more)
ft_gnls/: ft_gnl.c  ft_gnl_v2.c  ft_gnw.c  ft_sgnl.c  ft_tline_join.c  ft_tline_replace.c  gnl_stripped.c
ft_lst/: Makefile  ft_lstadd.c  ft_lstdel.c  ft_lstiter.c
ft_math/: Makefile  bi_add.c  bi_blocks.c  bi_ceq.c  bi_cmul.c  bi_commons.c  bi_comparisons.c  bi_convert.c  bi_div.c  bi_helpers.c  bi_iadd.c  bi_idiv.c  bi_imul.c  bi_increment.c  bi_is_divisible.c  bi_isub.c  bi_memory.c  bi_mul.c  bi_pow.c  bi_shift.c  bi_showtime.c  bi_sub.c  ft_fabs.c  ft_floor.c  ft_pow.c
ft_memory/: Makefile  ft_memdel.c  ft_memjoin.c  ft_memrelease.c  ft_realloc.c
ft_printf/: Makefile  convertors.c  float_accurate.c  float_convert.c  float_fast.c  float_helpers.c  float_rounding.c  ft_arprintf.c  ft_dprintf.c  ft_fprintf.c  ft_printf.c  ft_sprintf.c  ft_vdprintf.c  ft_vprintf.c  ft_vsprintf.c  lst.c  misc_tools.c  parsers.c  pos_args.c  put_float.c  put_misc.c  put_numbers.c  put_string.c  put_strings.c  tools.c
ft_str/: Makefile  ft_endswith.c  ft_isascii.c  ft_isdigit.c  ft_splitspace.c  ft_startswith.c  (+14 more)
(+193 files in other folders)
